## Process this with automake to create Makefile.in

install-exec-am:
	/bin/rm -rf $(DESTDIR)$(datadir)/$(PACKAGE)/*

iconsdir = $(datadir)/$(PACKAGE)/icons
icons_DATA = \
audio.png \
fullscreen.png\
loop.png \
playsel.png \
sepwin.png \
volume_mute.png \
zoom-in.png \
zoom-out.png

EXTRA_DIST = $(icons_DATA)
